REmove deprecated integer uses.